distributed in folders

--- a/upwork.html
+++ b/upwork.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>upwork</title>
-  <link rel="stylesheet" href="upwork.css">
+  <link rel="stylesheet" href="css/main_css.css">
 </head>
 <body>
 <div class="fixed_head">
   <div class="header">
     <div class="block">
-      <img src="logoUpwork.svg" alt="..." class="logo">
+      <img src="pictures/logoUpwork.svg" alt="..." class="logo">
       <div class="block1 talent">
         <a href="#" class="block_text">Find Talent</a>
-        <img src="arrow.svg" alt="..." class="arrow">
+        <img src="pictures/arrow.svg" alt="..." class="arrow">
         <div class="talent_box">
           <div class="box111">
             <div class="talent_box_text one">
@@ -20,7 +20,7 @@
                 <span>Post a job and hire a pro</span>
                 <span class="talent_span">Marketplace</span>
               </div>
-              <img src="arrow-next-small.svg" alt="..." class="arrow_next">
+              <img src="pictures/arrow-next-small.svg" alt="..." class="arrow_next">
               <div class="parent first_parent">
                 <div class="child1">
                   <h4>Talent Marketplace</h4>
@@ -47,7 +47,7 @@
                 <span>Browse and buy projects</span>
                 <span class="talent_span">Project Catalog</span>
               </div>
-              <img src="arrow-next-small.svg" alt="..." class="arrow_next">
+              <img src="pictures/arrow-next-small.svg" alt="..." class="arrow_next">
               <div class="parent second_parent">
                 <div class="child1">
                   <h4>Project Catalog</h4>
@@ -58,31 +58,31 @@
                 <div class="child_2">
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="logo.webp" alt="..." class="picture">
+                      <img src="pictures/logo.webp" alt="..." class="picture">
                       <div class="pic_text">Logo Design</div>
                     </div>
                     <div class="pics">
-                      <img src="smm.webp" alt="..." class="picture">
+                      <img src="pictures/smm.webp" alt="..." class="picture">
                       <div class="pic_text">Social Media Marketing</div>
                     </div>
                   </div>
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="blog.webp" alt="..." class="picture">
+                      <img src="pictures/blog.webp" alt="..." class="picture">
                       <div class="pic_text">Articles & Blog Posts</div>
                     </div>
                     <div class="pics">
-                      <img src="video.8e2caeb1.jpg" alt="..." class="picture">
+                      <img src="pictures/video.8e2caeb1.jpg" alt="..." class="picture">
                       <div class="pic_text">Video Editing</div>
                     </div>
                   </div>
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="wp.webp" alt="..." class="picture">
+                      <img src="pictures/wp.webp" alt="..." class="picture">
                       <div class="pic_text">WordPress</div>
                     </div>
                     <div class="pics">
-                      <img src="seo.webp" alt="..." class="picture">
+                      <img src="pictures/seo.webp" alt="..." class="picture">
                       <div class="pic_text">SEO</div>
                     </div>
                   </div>
@@ -94,7 +94,7 @@
                 <span>Get advice from in industry expert</span>
                 <span class="talent_span">Consultations</span>
               </div>
-              <img src="arrow-next-small.svg" alt="..." class="arrow_next">
+              <img src="pictures/arrow-next-small.svg" alt="..." class="arrow_next">
               <div class="parent third_parent">
                 <div class="child1">
                   <h4>Consultations</h4>
@@ -107,27 +107,27 @@
                 <div class="child_2">
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="web-programming.webp" alt="..." class="picture">
+                      <img src="pictures/web-programming.webp" alt="..." class="picture">
                       <div class="pic_text">Logo Design</div>
                     </div>
                     <div class="pics">
-                      <img src="ai.webp" alt="..." class="picture">
+                      <img src="pictures/ai.webp" alt="..." class="picture">
                       <div class="pic_text">Social Media Marketing</div>
                     </div>
                   </div>
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="marketing.webp" alt="..." class="picture">
+                      <img src="pictures/marketing.webp" alt="..." class="picture">
                       <div class="pic_text">Articles & Blog Posts</div>
                     </div>
                     <div class="pics">
-                      <img src="social-media.webp" alt="..." class="picture">
+                      <img src="pictures/social-media.webp" alt="..." class="picture">
                       <div class="pic_text">Video Editing</div>
                     </div>
                   </div>
                   <div class="block_pictures">
                     <div class="pics">
-                      <img src="website-builders.webp" alt="..." class="picture">
+                      <img src="pictures/website-builders.webp" alt="..." class="picture">
                       <div class="pic_text">WordPress</div>
                     </div>
                   </div>
@@ -139,7 +139,7 @@
       </div>
       <div class="block1 work">
         <a href="#" class="block_text">Find Work</a>
-        <img src="arrow.svg" alt="..." class="arrow">
+        <img src="pictures/arrow.svg" alt="..." class="arrow">
         <div class="find">
           <a href="#" class="find_block">
             <span class="find_text1">Ways to earn</span>
@@ -157,7 +157,7 @@
       </div>
       <div class="block1 why_upwork">
         <a href="#" class="block_text">Why Upwork</a>
-        <img src="arrow.svg" alt="..." class="arrow">
+        <img src="pictures/arrow.svg" alt="..." class="arrow">
         <div class="why">
           <div class="box1">
             <div class="box1_1">
@@ -204,30 +204,30 @@
     <div class="block">
       <div class="search">
         <a href="#" class="first">
-          <img class="search_sign" src="search.svg" alt="...">
+          <img class="search_sign" src="pictures/search.svg" alt="...">
           <input type="text" class="input" value placeholder="Search">
         </a>
         <a href="#" class="second">
           <span class="line">|</span>
           <span>Talent</span>
-          <img src="arrow.svg" alt="..." class="arrow">
+          <img src="pictures/arrow.svg" alt="..." class="arrow">
           <div class="second_boxes">
             <div class="second_box">
-              <img src="people.svg" class="people">
+              <img src="pictures/people.svg" class="people">
               <div>
                 <span class="second_box_heading">Talent</span><br>
                 <span class="second_box_text">Hire professionals and agencies</span>
               </div>
             </div>
             <div class="second_box">
-              <img src="projects.svg" class="people">
+              <img src="pictures/projects.svg" class="people">
               <div>
                 <span class="second_box_heading">Projects</span><br>
                 <span class="second_box_text">Buy ready-to-start services</span>
               </div>
             </div>
             <div class="second_box">
-              <img src="work.svg" class="people">
+              <img src="pictures/work.svg" class="people">
               <div>
                 <span class="second_box_heading">Jobs</span><br>
                 <span class="second_box_text">Apply to jobs posted by clients</span>
@@ -248,7 +248,7 @@
     <a href="#" class="text">Admin & Customer Support</a>
     <div class="more">
       <a href="#" class="text1">More
-        <img src="arrow.svg" alt="..." class="arrow">
+        <img src="pictures/arrow.svg" alt="..." class="arrow">
       </a>
       <div class="more_block">
         <div class="more1">Writing & Translation</div>
@@ -277,7 +277,7 @@
               <h3>Development & IT</h3><br>
             </div>
             <div class="browse_block_elements">
-            <img src="star.svg" alt="..." class="star">
+            <img src="pictures/star.svg" alt="..." class="star">
             <span>4.85/5</span> &emsp;
             <span>1853 skills</span>
             </div>
@@ -287,7 +287,7 @@
               <h3>AI Services</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.85/5</span> &emsp;
               <span>294 skills</span>
             </div>
@@ -297,7 +297,7 @@
               <h3>Design & Creative</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.91/5</span> &emsp;
               <span>968 skills</span>
             </div>
@@ -307,7 +307,7 @@
               <h3>Sales & Marketing</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.77/5</span> &emsp;
               <span>392 skills</span>
             </div>
@@ -317,7 +317,7 @@
               <h3>Writing & Translation</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.92/5</span> &emsp;
               <span>505 skills</span>
             </div>
@@ -327,7 +327,7 @@
               <h3>Admin & Customer Support</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.77/5</span> &emsp;
               <span>508 skills</span>
             </div>
@@ -337,7 +337,7 @@
               <h3>Finance & Accounting</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.79/5</span> &emsp;
               <span>214 skills</span>
             </div>
@@ -347,7 +347,7 @@
               <h3>Engineering & Architecture</h3><br>
             </div>
             <div class="browse_block_elements">
-              <img src="star.svg" alt="..." class="star">
+              <img src="pictures/star.svg" alt="..." class="star">
               <span>4.85/5</span> &emsp;
               <span>650 skills</span>
             </div>
@@ -392,14 +392,14 @@
               turn to Upwork
             </div>
             <div class="grey_block_blocks">
-              <img src="star2.svg" class="img">
+              <img src="pictures/star2.svg" class="img">
               <div class="grey_block_texts">
                 <span class="texts_head">Proof of quality</span><br>
                 <span>Check any pro's work samples, client reviews, and identity verification</span>
               </div>
             </div >
             <div class="grey_block_blocks">
-              <img src="money.svg" class="img">
+              <img src="pictures/money.svg" class="img">
               <div class="grey_block_texts">
                 <span class="texts_head">No cost until you hire</span><br>
                 <span>Interview potential fits for you job, negotiate rates, and only
@@ -407,7 +407,7 @@
               </div>
             </div>
             <div class="grey_block_blocks">
-              <img src="well_done.svg" class="img">
+              <img src="pictures/well_done.svg" class="img">
               <div class="grey_block_texts">
                 <span class="texts_head">Safe and secure</span><br>
                 <span>Focus on your work knowing we help protect your data and privacy.
@@ -420,21 +420,21 @@
             <div class="We">We're<br> the world's work<br> marketplace</div>
             <div class="greens">
               <div class="grey_block_blocks">
-                <img src="well_done.svg" class="img">
+                <img src="pictures/well_done.svg" class="img">
                 <div class="grey_block_texts green">
                   <span class="texts_head green">4.9/5</span><br>
                   <span>G2's 2021 Best Software Awards</span>
                 </div>
               </div>
               <div class="grey_block_blocks">
-                <img src="well_done.svg" class="img">
+                <img src="pictures/well_done.svg" class="img">
                 <div class="grey_block_texts green">
                   <span class="texts_head green">Award winner</span><br>
                   <span>G2's 2021 Best Software Awards</span>
                 </div>
               </div>
             </div>
-            <img src="reaching-person@2x.webp" alt="" class="girl">
+            <img src="pictures/reaching-person@2x.webp" alt="" class="girl">
           </div>
         </div>
         <div class="blue_block_with_girl">
